@@ -3,7 +3,7 @@
 |               PENDING - WORK IN PROGRESS                  |
 |                                                           |
  ===========================================================
-Afficher les coups qui ne sont pas dans l'arbre mais dans mask
+
 Incorporer patch Benigno
 
  ===========================================================
